--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,18 +9,15 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
+        <p>
+          Amila Gacrux is a generated Profile picture for Galverse project.
+          The manager behind Amila is Risa Harada who is working as a software developer, loves art and anime.
+        </p>
       </div>
       <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-      </div>
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Download Theme
-        </a>
+        <p>
+          Amila is curious about things she doesn't know yet! She loves to reserch, learn and execute.
+        </p>
       </div>
     </div>
   </div>
